--- a/TravelExpenses/appveyor.yml
+++ b/TravelExpenses/appveyor.yml
@@ -1,4 +1,8 @@
 version: 1.0.{build}
+branches:
+  only:
+  - dev
+
 image: Visual Studio 2019
 init:
 - cmd: git config --global core.autocrlf true
@@ -7,8 +11,8 @@ before_build:
 - cmd:
   dotnet --version
   dotnet restore ./TravelExpenses/TravelExpenses.csproj --verbosity m
-# build:
-#   verbosity: minimal
+build:
+  verbosity: minimal
 # test: off
 # artifacts:
 # - path: ./TravelExpenses/bin/Release/netcoreapp2.2/publish
