--- a/TravelExpenses/appsettings.json
+++ b/TravelExpenses/appsettings.json
@@ -1,8 +1,11 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
-}
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TravelExDb": "Data Source=sql5041.site4now.net;Initial Catalog=DB_A2906A_travelexpenses;user id=app_expenses;password=Expe_App2019nses"
+  }
+  }
