Implementing Erick changes

--- a/TravelExpenses/TravelExpenses.csproj
+++ b/TravelExpenses/TravelExpenses.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\TravelExpenses.Core\TravelExpenses.Core.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Pages\Solicitudes\" />
+  </ItemGroup>
+
 </Project>
