--- a/TravelExpenses/TravelExpenses.csproj
+++ b/TravelExpenses/TravelExpenses.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -17,5 +17,4 @@
   <ItemGroup>
     <ProjectReference Include="..\TravelExpenses.Core\TravelExpenses.Core.csproj" />
   </ItemGroup>
-
 </Project>
