Registro de solicitudes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/TravelExpenses/v15
+/TravelExpenses.Models
+/TravelExpenses.Core/bin/Debug/netcoreapp2.2
