Seguridad Envio de correo

--- a/TravelExpenses/appsettings.json
+++ b/TravelExpenses/appsettings.json
@@ -7,5 +7,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "MailServer": "smtp.gmail.com",
+    "MailPort": 465,
+    "SenderName": "Test",
+    "Sender": "desarrollotest2019@gmail.com",
+    "Password": "Pa55wordDesa"
+  }
 }
