--- a/TravelExpenses/TravelExpenses.csproj
+++ b/TravelExpenses/TravelExpenses.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="bin\Debug\netcoreapp2.2\" />
+    <Folder Include="TravelExpenses.Data\ObservacionR\" />
     <Folder Include="UploadFiles\" />
   </ItemGroup>
 </Project>
