Correccio  de coreos

--- a/TravelExpenses/appsettings.json
+++ b/TravelExpenses/appsettings.json
@@ -8,11 +8,19 @@
     }
   },
   "AllowedHosts": "*",
+  //"EmailSettings": {
+  //  "MailServer": "mail.dialtec.com.mx",
+  //  "MailPort": 465,
+  //  "SenderName": "Registro",
+  //  "Sender": "Demo@dialtec.com.mx",
+  //  "Password": "Dialtec05$"
+  //}
+
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
-    "MailPort": 465,
+    "MailPort": 587,
     "SenderName": "Test",
     "Sender": "desarrollotest2019@gmail.com",
     "Password": "Pa55wordDesa"
   }
-}
+  }
