--- a/TravelExpenses/appsettings.json
+++ b/TravelExpenses/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "TravelExDb": "Data Source=sql5041.site4now.net;Initial Catalog=DB_A2906A_travelexpenses;user id=app_expenses;password=Expe_App2019nses"
+    "TravelExDb": "Data Source=sql5045.site4now.net;Initial Catalog=DB_A359E3_Ozono;user id=DB_A359E3_Ozono_admin;password=Travel_2019Ex"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
+     
   },
   "AllowedHosts": "*",
   //"EmailSettings": {
